--- a/_news.html
+++ b/_news.html
@@ -31,19 +31,25 @@
 <header class="header">
     <div class="header__top">
         <div class="header__top-links container">
-            <a href="#">г. Яранск ул. Кирова д. 36</a>
-            <a href="#">8 (800) 123 45 56</a>
+            <a href="https://yandex.ru/maps/org/103389193980" target="_blank"
+            >г. Яранск ул. Кирова д. 36</a
+            >
+            <a href="tel:+7 (800) 123 45 56">8 (800) 123 45 56</a>
         </div>
     </div>
     <div class="header__main">
         <div class="header__main-body container">
             <a href="index.html" class="header__main-logo">
-                <img src="images/icons/logo.svg" alt="logo" class="logo image">
+                <img src="images/icons/logo.svg" alt="logo" class="logo image" />
             </a>
             <nav class="header__main-navigation">
                 <ul class="header__navigation-list">
-                    <li class="header__navigation-list__item"><a href="about.html" class="nav__link">О предприятии</a></li>
-                    <li class="header__navigation-list__item"><a href="news.html" class="nav__link">Новости</a></li>
+                    <li class="header__navigation-list__item">
+                        <a href="about.html" class="nav__link">О предприятии</a>
+                    </li>
+                    <li class="header__navigation-list__item">
+                        <a href="news.html" class="nav__link">Новости</a>
+                    </li>
                     <li class="header__navigation-list__item">
                         <a class="nav__link">Абонентам</a>
                         <ul class="navigation__sub-menu box">
@@ -54,17 +60,28 @@
                             <li><a href="connect.html" class="nav__link">Подключение к сетям</a></li>
                         </ul>
                     </li>
-                    <li class="header__navigation-list__item"><a href="" class="nav__link">Документы</a></li>
-                    <li class="header__navigation-list__item"><a href="contacts.html" class="nav__link">Контакты</a></li>
+                    <li class="header__navigation-list__item">
+                        <a href="" class="nav__link">Документы</a>
+                    </li>
+                    <li class="header__navigation-list__item">
+                        <a href="contacts.html" class="nav__link">Контакты</a>
+                    </li>
                 </ul>
             </nav>
+
+            <div class="mobile__navigation-button">
+                <button class="mobile__burger">
+                    <span></span>
+                </button>
+            </div>
+            <nav class="mobile__navigation"></nav>
         </div>
     </div>
 </header>
 
 <main>
-    <section class="page__title">
-        <div class="page__title-body container">
+    <section class="page__title" >
+        <div class="page__title-body container" >
             <h1 class="title">Городская баня возобновляет работу с 18 августа</h1>
         </div>
     </section>
@@ -74,19 +91,22 @@
 
             <article class="page__content-body">
                 <div class="content__row box">
-                    <h3>Добрый день!</h3>
-                    <p>
-                        ВНИМАНИЕ!
-                        Городская баня возобновляет работу с 18 августа в прежнем режиме:
+                    <div class="news__item-content">
+                        <span class="news__date">01.03.2023 г.</span>
+                        <h2 class="heading">Добрый день!</h2>
+                        <p class="p">
+                            ВНИМАНИЕ!
+                            Городская баня возобновляет работу с 18 августа в прежнем режиме:
                         </p>
-                    <ul>
-                        <li>Четверг – женский день  12:00 – 20:00</li>
-                        <li> Пятница – мужской день 12:00 – 20:00</li>
-                        <li> Суббота – женский день 10:00 – 20:00</li>
-                        <li> Воскресение – мужской день 10:00 – 20:00</li>
-                        <li> Касса работает до 19:00</li>
-                        <li> Стоимость помывки – 200 руб.</li>
-                    </ul>
+                        <ul class="list--withMarker">
+                            <li>Четверг – женский день  12:00 – 20:00</li>
+                            <li> Пятница – мужской день 12:00 – 20:00</li>
+                            <li> Суббота – женский день 10:00 – 20:00</li>
+                            <li> Воскресение – мужской день 10:00 – 20:00</li>
+                            <li> Касса работает до 19:00</li>
+                            <li> Стоимость помывки – 200 руб.</li>
+                        </ul>
+                    </div>
                 </div>
             </article>
         </div>
