--- a/news.html
+++ b/news.html
@@ -26,81 +26,56 @@
   </head>
 
   <body>
-    <header class="header">
-      <div class="header__top">
-        <div class="header__top-links container">
-          <a href="https://yandex.ru/maps/org/103389193980" target="_blank"
-            >г. Яранск ул. Кирова д. 36</a
-          >
-          <a href="tel:+7 (800) 123 45 56">8 (800) 123 45 56</a>
-        </div>
+  <header class="header">
+    <div class="header__top">
+      <div class="header__top-links container">
+        <a href="https://yandex.ru/maps/org/103389193980" target="_blank"
+        >г. Яранск ул. Кирова д. 36</a
+        >
+        <a href="tel:+7 (800) 123 45 56">8 (800) 123 45 56</a>
       </div>
-      <div class="header__main">
-        <div class="header__main-body container">
-          <a href="index.html" class="header__main-logo">
-            <img src="images/icons/logo.svg" alt="logo" class="logo image" />
-          </a>
-          <nav class="header__main-navigation">
-            <ul class="header__navigation-list">
-              <li class="header__navigation-list__item">
-                <a href="about.html" class="nav__link">О предприятии</a>
-              </li>
-              <li class="header__navigation-list__item">
-                <a href="news.html" class="nav__link">Новости</a>
-              </li>
-              <li class="header__navigation-list__item">
-                <a class="nav__link">Абонентам</a>
-                <ul class="navigation__sub-menu box">
-                  <li><a href="tarif.html" class="nav__link">Тарифы</a></li>
-                  <li><a href="standards.html" class="nav__link">Нормативы</a></li>
-                  <li><a href="services.html" class="nav__link">Услуги</a></li>
-                  <li><a href="quality.html" class="nav__link">Показатели качества</a></li>
-                  <li><a href="connect.html" class="nav__link">Подключение к сетям</a></li>
-                </ul>
-              </li>
-              <li class="header__navigation-list__item">
-                <a href="" class="nav__link">Документы</a>
-              </li>
-              <li class="header__navigation-list__item">
-                <a href="contacts.html" class="nav__link">Контакты</a>
-              </li>
-            </ul>
-          </nav>
+    </div>
+    <div class="header__main">
+      <div class="header__main-body container">
+        <a href="index.html" class="header__main-logo">
+          <img src="images/icons/logo.svg" alt="logo" class="logo image" />
+        </a>
+        <nav class="header__main-navigation">
+          <ul class="header__navigation-list">
+            <li class="header__navigation-list__item">
+              <a href="about.html" class="nav__link">О предприятии</a>
+            </li>
+            <li class="header__navigation-list__item">
+              <a href="news.html" class="nav__link">Новости</a>
+            </li>
+            <li class="header__navigation-list__item">
+              <a class="nav__link">Абонентам</a>
+              <ul class="navigation__sub-menu box">
+                <li><a href="tarif.html" class="nav__link">Тарифы</a></li>
+                <li><a href="standards.html" class="nav__link">Нормативы</a></li>
+                <li><a href="services.html" class="nav__link">Услуги</a></li>
+                <li><a href="quality.html" class="nav__link">Показатели качества</a></li>
+                <li><a href="connect.html" class="nav__link">Подключение к сетям</a></li>
+              </ul>
+            </li>
+            <li class="header__navigation-list__item">
+              <a href="" class="nav__link">Документы</a>
+            </li>
+            <li class="header__navigation-list__item">
+              <a href="contacts.html" class="nav__link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
 
-          <div class="mobile__navigation-button">
-            <button class="mobile__burger">
-              <span></span>
-            </button>
-          </div>
-          <nav class="mobile__navigation">
-            <ul class="header__navigation-list">
-              <li class="header__navigation-list__item">
-                <a href="about.html" class="nav__link">О предприятии</a>
-              </li>
-              <li class="header__navigation-list__item">
-                <a href="news.html" class="nav__link">Новости</a>
-              </li>
-              <li class="header__navigation-list__item">
-                <a class="nav__link">Абонентам</a>
-                <ul class="navigation__sub-menu box">
-                  <li><a href="tarif.html" class="nav__link">Тарифы</a></li>
-                  <li><a href="standards.html" class="nav__link">Нормативы</a></li>
-                  <li><a href="services.html" class="nav__link">Услуги</a></li>
-                  <li><a href="quality.html" class="nav__link">Показатели качества</a></li>
-                  <li><a href="connect.html" class="nav__link">Подключение к сетям</a></li>
-                </ul>
-              </li>
-              <li class="header__navigation-list__item">
-                <a href="" class="nav__link">Документы</a>
-              </li>
-              <li class="header__navigation-list__item">
-                <a href="contacts.html" class="nav__link">Контакты</a>
-              </li>
-            </ul>
-          </nav>
+        <div class="mobile__navigation-button">
+          <button class="mobile__burger">
+            <span></span>
+          </button>
         </div>
+        <nav class="mobile__navigation"></nav>
       </div>
-    </header>
+    </div>
+  </header>
 
     <main>
       <section class="page__title">
@@ -111,115 +86,43 @@
 
       <section class="page__content">
         <div class="container">
-          <div class="news__row row">
-            <div class="news__row-item box">
+          <div class="news__row ">
+            <a href="_news.html" class="news__row-item box">
               <img src="images/main/1.webp" alt="" class="item__image image" />
               <div class="item__body">
-                <a href="_news.html" class="item__body-link"
-                  >Городская баня возобновляет работу с 18 августа в прежнем режиме</a
+                <p class="news__item-text"
+                >Городская баня возобновляет работу с 18 августа в прежнем режиме</p
                 >
               </div>
               <span class="item__date">20 февраля 2023</span>
-            </div>
-            <div class="news__row-item box">
+            </a>
+            <a href="_news.html" class="news__row-item box">
               <img src="images/main/1.webp" alt="" class="item__image image" />
               <div class="item__body">
-                <a href="#" class="item__body-link"
-                  >Городская баня возобновляет работу с 18 августа в прежнем режиме</a
+                <p class="news__item-text"
+                >Городская баня возобновляет работу с 18 августа в прежнем режиме</p
                 >
               </div>
               <span class="item__date">20 февраля 2023</span>
-            </div>
-            <div class="news__row-item box">
+            </a>
+            <a href="_news.html" class="news__row-item box">
               <img src="images/main/1.webp" alt="" class="item__image image" />
               <div class="item__body">
-                <a href="#" class="item__body-link"
-                  >Городская баня возобновляет работу с 18 августа в прежнем режиме</a
+                <p class="news__item-text"
+                >Городская баня возобновляет работу с 18 августа в прежнем режиме</p
                 >
               </div>
               <span class="item__date">20 февраля 2023</span>
-            </div>
-            <div class="news__row-item box">
+            </a>
+            <a href="_news.html" class="news__row-item box">
               <img src="images/main/1.webp" alt="" class="item__image image" />
               <div class="item__body">
-                <a href="#" class="item__body-link"
-                  >Городская баня возобновляет работу с 18 августа в прежнем режиме</a
+                <p class="news__item-text"
+                >Городская баня возобновляет работу с 18 августа в прежнем режиме</p
                 >
               </div>
               <span class="item__date">20 февраля 2023</span>
-            </div>
-            <div class="news__row-item box">
-              <img src="images/main/1.webp" alt="" class="item__image image" />
-              <div class="item__body">
-                <a href="#" class="item__body-link"
-                  >Городская баня возобновляет работу с 18 августа в прежнем режиме</a
-                >
-              </div>
-              <span class="item__date">20 февраля 2023</span>
-            </div>
-            <div class="news__row-item box">
-              <img src="images/main/1.webp" alt="" class="item__image image" />
-              <div class="item__body">
-                <a href="#" class="item__body-link"
-                  >Городская баня возобновляет работу с 18 августа в прежнем режиме</a
-                >
-              </div>
-              <span class="item__date">20 февраля 2023</span>
-            </div>
-            <div class="news__row-item box">
-              <img src="images/main/1.webp" alt="" class="item__image image" />
-              <div class="item__body">
-                <a href="#" class="item__body-link"
-                  >Городская баня возобновляет работу с 18 августа в прежнем режиме</a
-                >
-              </div>
-              <span class="item__date">20 февраля 2023</span>
-            </div>
-            <div class="news__row-item box">
-              <img src="images/main/1.webp" alt="" class="item__image image" />
-              <div class="item__body">
-                <a href="#" class="item__body-link"
-                  >Городская баня возобновляет работу с 18 августа в прежнем режиме</a
-                >
-              </div>
-              <span class="item__date">20 февраля 2023</span>
-            </div>
-            <div class="news__row-item box">
-              <img src="images/main/1.webp" alt="" class="item__image image" />
-              <div class="item__body">
-                <a href="#" class="item__body-link"
-                  >Городская баня возобновляет работу с 18 августа в прежнем режиме</a
-                >
-              </div>
-              <span class="item__date">20 февраля 2023</span>
-            </div>
-            <div class="news__row-item box">
-              <img src="images/main/1.webp" alt="" class="item__image image" />
-              <div class="item__body">
-                <a href="#" class="item__body-link"
-                  >Городская баня возобновляет работу с 18 августа в прежнем режиме</a
-                >
-              </div>
-              <span class="item__date">20 февраля 2023</span>
-            </div>
-            <div class="news__row-item box">
-              <img src="images/main/1.webp" alt="" class="item__image image" />
-              <div class="item__body">
-                <a href="#" class="item__body-link"
-                  >Городская баня возобновляет работу с 18 августа в прежнем режиме</a
-                >
-              </div>
-              <span class="item__date">20 февраля 2023</span>
-            </div>
-            <div class="news__row-item box">
-              <img src="images/main/1.webp" alt="" class="item__image image" />
-              <div class="item__body">
-                <a href="#" class="item__body-link"
-                  >Городская баня возобновляет работу с 18 августа в прежнем режиме</a
-                >
-              </div>
-              <span class="item__date">20 февраля 2023</span>
-            </div>
+            </a>
           </div>
         </div>
       </section>
