--- a/_news.html
+++ b/_news.html
@@ -80,7 +80,7 @@
 </header>
 
 <main>
-    <section class="page__title" >
+    <section class="page__title page__title-cover" style="background-image: url('images/main/2.jpg')">
         <div class="page__title-body container" >
             <h1 class="title">Городская баня возобновляет работу с 18 августа</h1>
         </div>
@@ -94,7 +94,7 @@
                     <div class="news__item-content">
                         <span class="news__date">01.03.2023 г.</span>
                         <h2 class="heading">Добрый день!</h2>
-                        <p class="p">
+                        <p class="p ">
                             ВНИМАНИЕ!
                             Городская баня возобновляет работу с 18 августа в прежнем режиме:
                         </p>
