--- a/news.html
+++ b/news.html
@@ -88,7 +88,7 @@
         <div class="container">
           <div class="news__row ">
             <a href="_news.html" class="news__row-item box">
-              <img src="images/main/1.webp" alt="" class="item__image image" />
+              <img src="images/main/2.jpg" alt="" class="item__image image" />
               <div class="item__body">
                 <p class="news__item-text"
                 >Городская баня возобновляет работу с 18 августа в прежнем режиме</p
