--- a/about.html
+++ b/about.html
@@ -98,112 +98,93 @@
 
 </main>
 
-<footer >
+<footer>
     <div class="footer__main">
-        <div class="container">
-            <div class="footer__row row">
-                <div class="footer__nav">
-                    <div class="footer__nav-item">
-                        <div class="footer__heading"><a href="#" class="footer__nav-link">О предприятии</a></div>
-                        <div class="footer__heading"><a href="#" class="footer__nav-link">Документы</a></div>
-                        <div class="footer__heading"><a href="#" class="footer__nav-link">Новости</a></div>
-                    </div>
-
-                    <div class="footer__nav-item">
-                        <div class="footer__heading">Контакты</div>
-                        <ul class="footer__nav-list">
-                            <li>
-                                <span>Диспетчер</span>
-                                <a href="#" class="footer__nav-link">8 (83367) 2-22-22
-                                </a>
-                            </li>
-                            <li>
-                                <span>Бухгалтерия</span>
-                                <a href="#" class="footer__nav-link">8 (83367) 2-22-22
-                                </a>
-                            </li>
-                            <li>
-                                <span>Касса</span>
-                                <a href="#" class="footer__nav-link">8 (83367) 2-22-22
-                                </a>
-                            </li>
-                            <li>
-                                <span>Юрист</span>
-                                <a href="#" class="footer__nav-link">8 (83367) 2-22-22
-                                </a>
-                            </li>
-                            <li>
-                                <span>Директор</span>
-                                <a href="#" class="footer__nav-link">8 (83367) 2-22-22
-                                </a>
-                            </li>
-
-                        </ul>
-                    </div>
-
-                    <div class="footer__nav-item">
-                        <div class="footer__heading">Абонентам</div>
-                        <ul class="footer__nav-list">
-                            <li>
-                                <a href="#" class="footer__nav-link">Режим работы
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="footer__nav-link">Способы оплаты
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="footer__nav-link">Приборы учета
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="footer__nav-link">Тарифы
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="footer__nav-link">Обратная связь
-                                </a>
-                            </li>
-
-                        </ul>
-                    </div>
-
-                    <div class="footer__nav-item">
-
-                        <div class="footer__logo">
-                            <img src="images/icons/logoL.svg" class="logo image" alt="">
-                        </div>
-                        <div class="footer__social">
-                            <a href="#">
-                                <i class="footer__social-icon">
-                                    <img src="images/icons/tgIcon.svg" class="image" alt="">
-                                </i>
-                            </a>
-                            <a href="#">
-                                <i class="footer__social-icon">
-                                    <img src="images/icons/vkIcon.svg" class="image" alt="">
-                                </i>
-                            </a>
-                            <a href="#">
-                                <i class="footer__social-icon">
-                                    <img src="images/icons/mailIcon.svg" class="image" alt="">
-                                </i>
-                            </a>
-                        </div>
-                        <div class="footer__info-item">
-                            <span>г. Яранск ул. Кирова, 36</span>
-                        </div>
-
-                    </div>
-                </div>
-
+      <div class="container">
+        <div class="footer__row row">
+          <div class="footer__nav row">
+            <div class="footer__nav-item">
+              <div class="footer__heading">
+                <a href="#" class="footer__nav-link">О предприятии</a>
+              </div>
+              <div class="footer__heading">
+                <a href="#" class="footer__nav-link">Документы</a>
+              </div>
+              <div class="footer__heading">
+                <a href="/news.html" class="footer__nav-link">Новости</a>
+              </div>
             </div>
+
+            <div class="footer__nav-item">
+              <div class="footer__heading">Контакты</div>
+              <ul class="footer__nav-list">
+                <li>
+                  <span>Диспетчер</span>
+                  <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
+                </li>
+                <li>
+                  <span>Бухгалтерия</span>
+                  <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
+                </li>
+                <li>
+                  <span>Касса</span>
+                  <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
+                </li>
+                <li>
+                  <span>Юрист</span>
+                  <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
+                </li>
+                <li>
+                  <span>Директор</span>
+                  <a href="#" class="footer__nav-link">8 (83367) 2-22-22 </a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="footer__nav-item">
+              <div class="footer__heading">Абонентам</div>
+              <ul class="footer__nav-list">
+                <li><a href="tarif.html" class="footer__nav-link">Тарифы</a></li>
+                <li><a href="standards.html" class="footer__nav-link">Нормативы</a></li>
+                <li><a href="services.html" class="footer__nav-link">Услуги</a></li>
+                <li><a href="quality.html" class="footer__nav-link">Показатели качества</a></li>
+                <li><a href="connect.html" class="footer__nav-link">Подключение к сетям</a></li>
+              </ul>
+            </div>
+
+            <div class="footer__nav-item">
+              <div class="footer__logo">
+                <img src="images/icons/logoL.svg" class="logo image" alt="" />
+              </div>
+              <div class="footer__social">
+                <a href="#">
+                  <i class="footer__social-icon">
+                    <img src="images/icons/tgIcon.svg" class="image" alt="" />
+                  </i>
+                </a>
+                <a href="#">
+                  <i class="footer__social-icon">
+                    <img src="images/icons/vkIcon.svg" class="image" alt="" />
+                  </i>
+                </a>
+                <a href="#">
+                  <i class="footer__social-icon">
+                    <img src="images/icons/mailIcon.svg" class="image" alt="" />
+                  </i>
+                </a>
+              </div>
+              <div class="footer__info-item">
+                <span>г. Яранск ул. Кирова, 36</span>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
     <div class="footer__bottom">
-        <span>2023 © МУП Водоканал г. Яранск</span>
+      <span>2023 © МУП Водоканал г. Яранск</span>
     </div>
-</footer>
+  </footer>
 
 </body>
 </html>
