--- a/index.html
+++ b/index.html
@@ -183,8 +183,6 @@
               </div>
               <span class="item__date">20 февраля 2023</span>
             </a>
-
-
           </div>
           <div class="news__more">
             <a href="news.html" class="button">Все новости</a>
@@ -239,21 +237,11 @@
               <div class="footer__nav-item">
                 <div class="footer__heading">Абонентам</div>
                 <ul class="footer__nav-list">
-                  <li>
-                    <a href="#" class="footer__nav-link">Режим работы </a>
-                  </li>
-                  <li>
-                    <a href="#" class="footer__nav-link">Способы оплаты </a>
-                  </li>
-                  <li>
-                    <a href="#" class="footer__nav-link">Приборы учета </a>
-                  </li>
-                  <li>
-                    <a href="#" class="footer__nav-link">Тарифы </a>
-                  </li>
-                  <li>
-                    <a href="#" class="footer__nav-link">Обратная связь </a>
-                  </li>
+                  <li><a href="tarif.html" class="footer__nav-link">Тарифы</a></li>
+                  <li><a href="standards.html" class="footer__nav-link">Нормативы</a></li>
+                  <li><a href="services.html" class="footer__nav-link">Услуги</a></li>
+                  <li><a href="quality.html" class="footer__nav-link">Показатели качества</a></li>
+                  <li><a href="connect.html" class="footer__nav-link">Подключение к сетям</a></li>
                 </ul>
               </div>
 
@@ -290,6 +278,7 @@
         <span>2023 © МУП Водоканал г. Яранск</span>
       </div>
     </footer>
+    
     <div class="modal">
       <div class="modal__overlay">
         <div data-box="payments" class="modal__content-item box">
