--- a/news.html
+++ b/news.html
@@ -132,7 +132,7 @@
       <div class="footer__main">
         <div class="container">
           <div class="footer__row row">
-            <div class="footer__nav">
+            <div class="footer__nav row">
               <div class="footer__nav-item">
                 <div class="footer__heading">
                   <a href="#" class="footer__nav-link">О предприятии</a>
@@ -140,7 +140,9 @@
                 <div class="footer__heading">
                   <a href="#" class="footer__nav-link">Документы</a>
                 </div>
-                <div class="footer__heading"><a href="#" class="footer__nav-link">Новости</a></div>
+                <div class="footer__heading">
+                  <a href="/news.html" class="footer__nav-link">Новости</a>
+                </div>
               </div>
 
               <div class="footer__nav-item">
@@ -172,21 +174,11 @@
               <div class="footer__nav-item">
                 <div class="footer__heading">Абонентам</div>
                 <ul class="footer__nav-list">
-                  <li>
-                    <a href="#" class="footer__nav-link">Режим работы </a>
-                  </li>
-                  <li>
-                    <a href="#" class="footer__nav-link">Способы оплаты </a>
-                  </li>
-                  <li>
-                    <a href="#" class="footer__nav-link">Приборы учета </a>
-                  </li>
-                  <li>
-                    <a href="#" class="footer__nav-link">Тарифы </a>
-                  </li>
-                  <li>
-                    <a href="#" class="footer__nav-link">Обратная связь </a>
-                  </li>
+                  <li><a href="tarif.html" class="footer__nav-link">Тарифы</a></li>
+                  <li><a href="standards.html" class="footer__nav-link">Нормативы</a></li>
+                  <li><a href="services.html" class="footer__nav-link">Услуги</a></li>
+                  <li><a href="quality.html" class="footer__nav-link">Показатели качества</a></li>
+                  <li><a href="connect.html" class="footer__nav-link">Подключение к сетям</a></li>
                 </ul>
               </div>
 
