--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
     <header class="header">
       <div class="header__top">
         <div class="header__top-links container">
-          <a href="https://yandex.ru/maps/org/103389193980" target="_blank"
-            >г. Яранск ул. Кирова д. 36</a
-          >
+          <a href="https://yandex.ru/maps/org/103389193980" target="_blank">г. Яранск ул. Кирова д. 36</a>
           <a href="tel:+7 (800) 123 45 56">8 (800) 123 45 56</a>
         </div>
       </div>
@@ -140,9 +138,7 @@
               </div>
               <div class="services__row-item tr services__row-item--full box">
                 <p class="item__title">Передача показаний индивидуальных приборов учета</p>
-                <span class="item__subtitle"
-                  >Показания принимаются с 01 по 25 число каждого месяца</span
-                >
+                <span class="item__subtitle">Показания принимаются с 01 по 25 число каждого месяца</span>
                 <button data-services="readings" data-control="control" class="button">
                   Передать показания
                 </button>
@@ -183,8 +179,6 @@
               </div>
               <span class="item__date">20 февраля 2023</span>
             </a>
-
-
           </div>
           <div class="news__more">
             <a href="news.html" class="button">Все новости</a>
@@ -239,21 +233,11 @@
               <div class="footer__nav-item">
                 <div class="footer__heading">Абонентам</div>
                 <ul class="footer__nav-list">
-                  <li>
-                    <a href="#" class="footer__nav-link">Режим работы </a>
-                  </li>
-                  <li>
-                    <a href="#" class="footer__nav-link">Способы оплаты </a>
-                  </li>
-                  <li>
-                    <a href="#" class="footer__nav-link">Приборы учета </a>
-                  </li>
-                  <li>
-                    <a href="#" class="footer__nav-link">Тарифы </a>
-                  </li>
-                  <li>
-                    <a href="#" class="footer__nav-link">Обратная связь </a>
-                  </li>
+                  <li><a href="tarif.html" class="footer__nav-link">Тарифы</a></li>
+                  <li><a href="standards.html" class="footer__nav-link">Нормативы</a></li>
+                  <li><a href="services.html" class="footer__nav-link">Услуги</a></li>
+                  <li><a href="quality.html" class="footer__nav-link">Показатели качества</a></li>
+                  <li><a href="connect.html" class="footer__nav-link">Подключение к сетям</a></li>
                 </ul>
               </div>
 
